[project]
name = "drl_lab"
version = "0.1.0"
description = "Deep Reinforcement Learning Lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "gymnasium[classic-control,toy-text]>=1.2.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "textual>=1.0.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
gpu = []

[project.scripts]
rlab = "drl_lab.cli.main:cli"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.hatch.build.targets.wheel]
packages = ["drl_lab"]
